New entries should be added at the top
=======

2004-06-17 backend_gtk.py: Create a GC once in realise(), not every
           time draw() is called.

2004-06-16 Added new py2exe FAQ entry and added frozen support in
           get_data_path for py2exe - JDH

2004-06-16 Removed GTKGD, which was always just a proof-of-concept
           backend - JDH

2004-06-16 backend_gtk.py updates to replace deprecated functions
	   gtk.mainquit(), gtk.mainloop().
           Update NavigationToolbar to use the new GtkToolbar API - SC

2004-06-15 removed set_default_font from font_manager to unify font
           customization using the new function rc.  See API_CHANGES
           fpr more info -  JDH

2004-06-15 Improved (yet again!) axis scaling to properly handle
           singleton plots - JDH

2004-06-15 Restored the old FigureCanvasGTK.draw() - SC

2004-06-11 More memory leak fixes in transforms and ft2font - JDH

2004-06-11 Eliminated numerix .numerix file and environment variable
	   NUMERIX.  Fixed bug which prevented command line overrides:
	   --numarray or --numeric. - JTM

2004-06-10 Added rc configuration function rc; deferred all rc param
           setting until object creation time; added new rc attrs:
           lines.markerfacecolor, lines.markeredgecolor,
           lines.markeredgewidth, patch.linewidth, patch.facecolor,
           patch.edgecolor, patch.antialiased; see
           examples/customize_rc.py for usage - JDH


---------------------------------------------------------------
2004-06-09 0.54.2 released

2004-06-08 Rewrote ft2font using CXX as part of general memory leak
           fixes; also fixed transform memory leaks  - JDH

2004-06-07 Fixed several problems with log ticks and scaling - JDH

2004-06-07 Fixed width/height issues for images - JDH

2004-06-03 Fixed draw_if_interactive bug for semilogx; 

2004-06-02 Fixed text clipping to clip to axes - JDH

2004-06-02 Fixed leading newline text and multiple newline text - JDH
